Fix spacing in header of XDocScreen

--- a/src/main/java/com/googlesource/gerrit/plugins/xdocs/public/xdocs.css
+++ b/src/main/java/com/googlesource/gerrit/plugins/xdocs/public/xdocs.css
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
+.xdocs-header td {
+  padding-right: 5px;
+}
+
 .xdocs-panel iframe {
   width: 100%;
 }
